chore: fix link

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -44,7 +44,7 @@ However, the contest creator can set the contest to unlisted and remove it from 
  
 ### Can I verify this contract?
 
-Yes! See [Verifying Contracts](/verifying-contracts).
+Yes! See [Verifying Contracts](/technical-how-tos/verifying-contracts).
 
 ### If I delete a submission, how does that affect who can submit?
 
