chore: update linking

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -273,9 +273,7 @@ One easy way to imagine JokeRace is as a ledger of user preferences and attestat
 
 What this means is that even if you lose a contest, you still win—because you’re earning reputation. For example, if a community designed a simple point system that offered one “point” for every vote a person received, they would be able to gauge the value that this person had contributed to the community—by merely adding up the onchain votes over time. With a legitimate voterpool, this system couldn’t be botted or overrun by airdrop farmers. Submitters would actually have to create value for the community to earn value in return. 
 
-But this is just one example. In fact, because JokeRace is fully onchain, you can use any data point from contests to determine your own system of rewarding reputation. We actually created a Flipside dashboard you can use if you want to input your contest:
-
-https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/jokerace-analytics-UIs4gX
+But this is just one example. In fact, because JokeRace is fully onchain, you can use any data point from contests to determine your own system of rewarding reputation. We actually created a Flipside dashboard you can use if you want to input your contest [here](https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/jokerace-analytics-UIs4gX).
 
 Some of our users have created Dune dashboards as well with queries. Feel free to fork any of these for your own use cases.
 
