chore: update chains

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -78,13 +78,13 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 - Blast
 - BNB
 - Celo
-- DegenChain
-- Dymension
+- Degen
 - EOS
 - Evmos
 - Fantom
 - Fraxtal
 - Fuse
+- Gold
 - Gnosis
 - Holesky
 - InEVM
@@ -100,10 +100,10 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 - Mode
 - NautilusChain
 - Near
+- Neon
 - Optimism
 - QChain
 - Quartz
-- RedstoneHolesky
 - Ronin
 - Scroll
 - Sei
@@ -133,7 +133,7 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 - Frame
 - Fraxtal
 - Gnosis
-- Goerli
+- Holesky
 - InEVM
 - Linea
 - Lit
@@ -150,6 +150,7 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 - Polygon
 - PolygonZk
 - QChain
+- RedstoneHolesky
 - Ronin
 - Scroll
 - ScrollSepolia
