chore: add camp

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -126,6 +126,7 @@ Voters can vote as many times as they like—as long as they have enough votes. 
 - Base
 - Berachain
 - Blast
+- Camp
 - Celo
 - EOS
 - Evmos
