feat: add frames faqs

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -245,6 +245,25 @@ There are endless ways to monetize contests, some natively on JokeRace’s site,
 - Zora
 :::
 
+## Frames
+
+### Which chains are Frames currently supported on?
+
+Farcaster currently supports Frames on these chains:
+- Ethereum mainnet
+- Base
+- Optimism
+- Zora
+- Base Sepolia
+
+### What type of contests do JokeRace Frames currently support?
+
+JokeRace Frames currently support contests that are anyone can submit or anyone can vote. If your contest is anyone can submit, then you can use Frames for the submission portion of your contest; if your contest is anyone can vote, then you can use Frames for the voting portion of your contest; and if your contest is anyone can submit and anyone can vote, then you can use Frames for every portion of your contest.
+
+### How do I make a frame?
+
+All you need to do is cast the link to the contest you'd like to share the frame for and it will auto-populate in Warpcast!
+
 ## Troubleshooting
 
 ### I can’t submit or vote even though I should be allowlisted—what’s happening?
