chore: update frame faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -247,22 +247,27 @@ There are endless ways to monetize contests, some natively on JokeRace’s site,
 
 ## Frames
 
-### Which chains are Frames currently supported on?
+### Which chains are frames currently supported on?
 
-Farcaster currently supports Frames on these chains:
+Farcaster currently supports frames on these chains:
 - Ethereum mainnet
 - Base
 - Optimism
 - Zora
 - Base Sepolia
 
-### What type of contests do JokeRace Frames currently support?
+### What type of contests do JokeRace frames currently support?
 
-JokeRace Frames currently support contests that are anyone can submit or anyone can vote. If your contest is anyone can submit, then you can use Frames for the submission portion of your contest; if your contest is anyone can vote, then you can use Frames for the voting portion of your contest; and if your contest is anyone can submit and anyone can vote, then you can use Frames for every portion of your contest.
+JokeRace frames currently support contests that are anyone can submit or anyone can vote. If your contest is anyone can submit, then you can use frames for the submission portion of your contest; if your contest is anyone can vote, then you can use frames for the voting portion of your contest; and if your contest is anyone can submit and anyone can vote, then you can use frames for every portion of your contest.
+
+### What can I submit to a frame?
+
+Frames currently only accept text-based submissions. If you would like to submit media, pleast submit a link to wherever it is being hosted.
 
 ### How do I make a frame?
 
-All you need to do is cast the link to the contest you'd like to share the frame for and it will auto-populate in Warpcast!
+- If you'd like to share a submission frame, all you need to do is cast the link to the contest you'd like to share the frame for and it will auto-populate in Warpcast!
+- If you'd like to share a voting frame, all you need to do is cast the link to the submission you'd like people to be able to vote with the frame on and it will auto-populate in Warpcast!
 
 ## Troubleshooting
 
