--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -269,6 +269,27 @@ Frames currently only accept text-based submissions. If you would like to submit
 - If you'd like to share a submission frame, all you need to do is cast the link to the contest you'd like to share the frame for and it will auto-populate in Warpcast!
 - If you'd like to share a voting frame, all you need to do is cast the link to the submission you'd like people to be able to vote with the frame on and it will auto-populate in Warpcast!
 
+## Extensions
+
+### What are extensions?
+
+Extensions are 3rd party integrations built on top of JokeRace’s protocol that extend the features and functionality of contests.
+Anyone can build an extension permissionlessly, and we’ll feature select ones on our site that link to the 3rd party’s integration. We want users to discover the services of anyone who has built on top of us.
+
+### What should I do if I want to build an extension?
+
+First of all, dm us on [twitter](https://twitter.com/jokerace_io)! We’d love to hear what you’re up to and see if we can support.
+
+JokeRace is fully onchain, so we have no API: the blockchain itself is effectively our API. You can query and parse and listen to any data you need directly from the chain, as each contest is its own smart contract.
+
+Generally the strongest extensions will include:
+
+A standalone page for a given contest—or for users to input the url to a contest. This lets us link directly to a page that’s specifically relevant to JokeRace.
+Ample context on the page about how the extension works and what each field means (or, alternately, a link to docs explaining these)
+Support for as many EVM chains as possible.
+
+Not all extensions should look the same, however. We want JokeRace to be able to feed data and metadata into everything from analytics and points platforms to onchain execution services, so our top goal is expanding use cases for partners.
+
 ## Troubleshooting
 
 ### I can’t submit or vote even though I should be allowlisted—what’s happening?
