chore: include numbered points

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -284,9 +284,9 @@ JokeRace is fully onchain, so we have no API: the blockchain itself is effective
 
 Generally the strongest extensions will include:
 
-A standalone page for a given contest—or for users to input the url to a contest. This lets us link directly to a page that’s specifically relevant to JokeRace.
-Ample context on the page about how the extension works and what each field means (or, alternately, a link to docs explaining these)
-Support for as many EVM chains as possible.
+1. A standalone page for a given contest—or for users to input the url to a contest. This lets us link directly to a page that’s specifically relevant to JokeRace.
+2. Ample context on the page about how the extension works and what each field means (or, alternately, a link to docs explaining these)
+3. Support for as many EVM chains as possible.
 
 Not all extensions should look the same, however. We want JokeRace to be able to feed data and metadata into everything from analytics and points platforms to onchain execution services, so our top goal is expanding use cases for partners.
 
