chore: add examples of extensions

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -290,6 +290,26 @@ Generally the strongest extensions will include:
 
 Not all extensions should look the same, however. We want JokeRace to be able to feed data and metadata into everything from analytics and points platforms to onchain execution services, so our top goal is expanding use cases for partners.
 
+### What are examples of extensions?
+
+Current extensions include:
+
+- Assigning roles and powers to winners of contests with Hats Protocol
+- Generating insights about players based on their onchain histories with Bello
+- Rewarding winners NFTs with Coinvise
+
+Potential future extensions could include:
+
+- Minting winning entries as NFTs
+- Deploying capital with parameters set by the winning submission
+- Buying back tokens with the fees accrued by the contest
+- Resubmitting fees from contest into rewards
+- Slashing node operators based on the vote of a contest
+- Adding winners to a multisig
+- Revoking membership in a community
+- Curating data sets to train an AI agent
+- Approving an AI agent to take actions onchain
+
 ## Troubleshooting
 
 ### I can’t submit or vote even though I should be allowlisted—what’s happening?
