chore: fix grammar

--- a/docs/pages/technical-how-tos/token-buybacks.mdx
+++ b/docs/pages/technical-how-tos/token-buybacks.mdx
@@ -18,4 +18,4 @@ In the monetization step of the create flow, set the "another wallet" field belo
 
 ### Create your contest!
 
-Once your contest is live, all submitting and voting transaction on it will directly buy your token and send it to the player who is submitting or voting!
+Once your contest is live, all submitting and voting transactions on it will directly buy your token and send it to the player who is submitting or voting!
