wording: update to Circuits

--- a/docs/pages/technical-how-tos/circuits.mdx
+++ b/docs/pages/technical-how-tos/circuits.mdx
@@ -1,8 +1,10 @@
-# Token Buybacks
+# Circuits
 
-We just shipped the ability for contest creators to direct where they want their earnings to go, which means that you can point them to a contract that buys back your community's token every time someone submits or votes in your contest.
+We just shipped the ability for contest creators to direct where they want their earnings to go, which means that programmatic circuits can be built that supercharge engagement.
 
-## How to
+## Token Buybacks
+
+You can point your contest's creator earnings to a contract that buys back your community's token every time someone submits or votes in your contest.
 
 ::::steps
 
