wording: improve circuits summary

--- a/docs/pages/technical-how-tos/circuits.mdx
+++ b/docs/pages/technical-how-tos/circuits.mdx
@@ -1,6 +1,6 @@
 # Circuits
 
-We just shipped the ability for contest creators to direct where they want their earnings to go, which means that programmatic circuits can be built that supercharge engagement.
+We just shipped the ability for contest creators to direct where they want their earnings to go, which means that programmatic circuits can be built to supercharge engagement.
 
 ## Token Buybacks
 
